--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
 
   1.4K
   Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/Great-kiola" target="_blank">Kilaso Olabode</a>.
-  </div>
+  
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/Great-kiola" target="_blank">Kilaso Olabode</a>.
+    </div>
+</footer>
 </body>
 </html>
