--- a/index.html
+++ b/index.html
@@ -10,24 +10,30 @@
 
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  
-  <footer>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/Great-kiola" target="_blank">Kilaso Olabode</a>.
+  <main>
+    <div class="topEl">
+      <img class="imgCard2" src="/images/bg-pattern-card.svg" />
+      <img class="imgCard" src="images/image-victor.jpg" alt="Victor Crest headshot">
+      <h1 class="userName"> Victor Crest <span>26</span></h1>
+      <p>London</p>      
     </div>
-</footer>
+    <hr>    
+
+    <h1 class="followCount"> 80K </h1>
+    <p>Followers</p>
+
+    <h1 class="followCount"> 80K </h1>
+    <p>Followers</p>
+
+    <h1 class="followCount"> 80K </h1>
+    <p>Followers</p>
+
+  </main>
 </body>
+
+<footer class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="https://github.com/Great-kiola" target="_blank">Kilaso Olabode</a>.
+</footer>
+
 </html>
