Made changes to the index and style file

--- a/index.html
+++ b/index.html
@@ -12,21 +12,30 @@
 <body>
   <main>
     <div class="topEl">
-      <img class="imgCard2" src="/images/bg-pattern-card.svg" />
-      <img class="imgCard" src="images/image-victor.jpg" alt="Victor Crest headshot">
+      <img class="imgCard" src="images/image-victor.jpg" alt="Victor Crest headshot" />
       <h1 class="userName"> Victor Crest <span>26</span></h1>
       <p>London</p>      
     </div>
     <hr>    
 
-    <h1 class="followCount"> 80K </h1>
-    <p>Followers</p>
+    <div class="followerStatus">
 
-    <h1 class="followCount"> 80K </h1>
-    <p>Followers</p>
+      <li>
+        <h1 class="followCount"> 80K </h1>
+        <p>Followers</p>
+      </li>
 
-    <h1 class="followCount"> 80K </h1>
-    <p>Followers</p>
+      <li>
+        <h1 class="followCount"> 803K </h1>
+        <p>Likes</p>
+      </li>
+
+      <li>
+        <h1 class="followCount"> 1.4K </h1>
+        <p>Photos</p>
+      </li>
+
+    </div>
 
   </main>
 </body>
